Fixed bug with spacing and numbering of example sentences

--- a/qathebo/style/template.css
+++ b/qathebo/style/template.css
@@ -120,7 +120,7 @@ li > ol, li > ul {
 	position: relative;
 	flex-direction: column;
 	margin: 3ch auto;
-	padding: 0 1.5em;
+	padding: 0 5ch;
 	/* border-top: 1px solid black; */
 	/* border-bottom: 1px solid black; */
 	align-content: center;
@@ -132,14 +132,6 @@ li > ol, li > ul {
 	left: 0;
 	top: 0;
 	margin: 0.5ch;
-}
-
-.number::before {
-	content: '(';
-}
-
-.number::after {
-	content: ')';
 }
 
 .original {
